# idm-server

./: Cargo.toml  README.md  config.yaml
assets/device/info/: 111.json  222.json
design/: interface.md
src/: main.rs
src/api/: api.rs  api_conf.rs  mod.rs
src/conf/: conf.rs
src/device_info/: device_info.rs  mod.rs
src/domain/: mod.rs
src/domain/eval/: eval.rs
src/domain/types/: mod.rs  tcp.rs
src/server/: connection.rs  connection_conf.rs  context.rs  cot.rs  mod.rs  reply.rs  req.rs  req_dev_info.rs  request.rs  select_cot.rs  select_dev_doc.rs  select_dev_info.rs  select_req.rs  server.rs  server_conf.rs  server_connection_conf.rs
src/test/: template_test.rs
src/test/unit/server/: device_info_test.rs  mod.rs  select_cot_test.rs  select_dev_info_test.rs  select_device_info_test.rs  select_req_test.rs
src/test/unit/server/device_info/: 111.json  222.json  333.json
src/types/: error.rs
